style.css
@font-face {
  font-family: norse-bold;
  src: url("Norse-Bold.otf");
}

:root {
  height: 100%;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";

  --light-grey: #E5E7EB;
  --red: #dc3545;
  --green: #596D48;
  --blue: #007bff;
}

body {
  display: flex;
  align-items: stretch;
  min-height: 100%;
  margin: 0;
}

.image-container {
  display: flex;
  flex-direction: column;
  flex: 1;
  position: relative;
  background-image: url("bg-img.jpg");
  background-size: cover;
}

.content-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  gap: 40px;
  flex: 2;
  background-color: var(--light-grey);
}

.logo-container {
  display: flex;
  justify-content: center;
  gap: 15px;
  align-items: center;
  position: absolute;
  top: 20%;
  padding: 15px 0;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}

.logo-image {
  height: 130px;
  width: auto;
}

.logo-text {
  color: white;
  font-family: norse-bold, sans-serif;
  font-size: 6rem;
}

.image-source {
  margin: auto auto 5px;
  color: white;
}

.image-source > a {
  color: white;
}

.header-text {
  padding: 0 200px 0 50px;
}

.form-container {
  padding: 0 50px 10px;
  background-color: white;
  color: #222;
  box-shadow: 3px 3px 8px #aaa;
}

.form-row {
  display: flex;
  flex-wrap: wrap;
  gap: 25px 75px;
  margin: 25px 0;
}

.form-group {
  display: flex;
  flex-direction: column;
}

.form-input {
  border: 1px solid var(--light-grey);
  border-radius: 6px;
  padding-left: 10px;
  height: 2rem;
  width: 350px;
  font-size: 1rem;
}

.form-input:focus {
  border-color: var(--blue);
  outline: none;
  box-shadow: 2px 2px 5px #ccc;
}

.error {
  border-color: var(--red);
  outline: none;
}

.error-text {
  color: var(--red);
  font-size: 0.85rem;
}

.signup-button {
  border: 0;
  border-radius: 10px;
  margin-left: 50px;
  height: 60px;
  width: 240px;
  box-shadow: 2px 2px 5px #ccc;
  background-color: var(--green);
  color: white;
}

.login-text {
  padding-left: 50px;
  font-size: 1.2rem;
}

.login-text a {
  text-decoration: none;
  font-weight: bold;
  color: var(--green);
}

